welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: ':' expected but ',' found.
def move(pas,avant) = { if avant=true 
            ^Program:8: error: identifier expected but '}' found.
}
^